# anonymous_seedphrase

./: .gitignore  CONTEXT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: GUIDE_UTILISATEUR.md
src/app/: main.py
src/crypto/: encryption.py
tests/unit/: test_encryption.py
